cloud/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: library1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: weshigbee/course-microsvcs-api:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: library1
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
