cloud/postgres.yml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.31.0/all.json

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:

        # - name: metrics
        #   # https://github.com/prometheus-community/postgres_exporter
        #   image: quay.io/prometheuscommunity/postgres-exporter
        #   env:
        #     - name: DATA_SOURCE_URI
        #       value: "localhost:5432/postgres?sslmode=disable"
        #     - name: DATA_SOURCE_USER
        #       value: "library_user"
        #     - name: DATA_SOURCE_PASS
        #       value: "library_pass"
        #   ports:
        #     - containerPort: 9187
        #   resources:
        #     limits:
        #       cpu: 200m
        #       memory: 128Mi
        #     requests:
        #       cpu: 50m
        #       memory: 64Mi

        - name: postgres
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
