cloud/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: library1
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: weshigbee/course-microsvcs-web:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: library1
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
